--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -username NASOKILA",
+    "deploy": "gh-pages -d build -usename NASOKILA",
     "eject": "react-scripts eject"
   }
 }
